Routing setup implemented and layout issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
 @import "tailwindcss";
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
+}
+
 .appContainer {
-  min-height: 100dvh;
+  /* min-height: auto; */
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.componentContainer {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 @keyframes growCircle {
